# global-temperature-visual

./: pyproject.toml
.claude/: settings.local.json
scripts/: generate_report.py  update_data.py
src/: app.py  data_engine.py
src/static/css/: style.css
src/static/js/: city-temp-chart.js  city.js  city_temp_chart.js  dashboard.js  global_temp_chart.js  global_temp_line.js
src/templates/: index.html
