[project]
name = "global-temperature-visual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.0",
    "pandas>=3.0.2",
    "python-docx>=1.2.0",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.34.0",
]


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.2",
]

